# 900Sheets

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/desktop/src/: App.svelte  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: types.ts
apps/desktop/src/lib/utils/: grid.ts  mutationQueue.d.ts  mutationQueue.js  recoveryAutosave.d.ts  recoveryAutosave.js  undoRedo.ts
apps/desktop/tests/e2e/: spreadsheet-interactions.spec.ts
apps/desktop/tests/unit/: mutationQueue.test.js  recoveryAutosave.test.js
crates/sheets-advanced/: Cargo.toml
crates/sheets-advanced/src/: lib.rs
crates/sheets-chart/: Cargo.toml
crates/sheets-chart/src/: lib.rs
crates/sheets-core/: Cargo.toml
crates/sheets-core/src/: address.rs  cell.rs  data_tools.rs  error.rs  format.rs  lib.rs  number_format.rs  sheet.rs  workbook.rs
crates/sheets-csv/: Cargo.toml
crates/sheets-csv/src/: error.rs  export.rs  import.rs  lib.rs
crates/sheets-fixtures/: Cargo.toml
crates/sheets-fixtures/src/: lib.rs
crates/sheets-formula/: Cargo.toml
crates/sheets-formula/src/: ast.rs  dependency.rs  error.rs  evaluator.rs  functions.rs  lib.rs  parser.rs  tokenizer.rs
crates/sheets-i18n/: Cargo.toml
crates/sheets-i18n/src/: lib.rs
crates/sheets-json/: Cargo.toml
crates/sheets-json/src/: error.rs  export.rs  import.rs  lib.rs  native.rs
crates/sheets-pivot/: Cargo.toml
crates/sheets-pivot/src/: lib.rs
crates/sheets-print/: Cargo.toml
crates/sheets-print/src/: lib.rs
crates/sheets-validation/: Cargo.toml
crates/sheets-validation/src/: lib.rs
crates/sheets-xlsx/: Cargo.toml
crates/sheets-xlsx/examples/: generate_compat.rs
crates/sheets-xlsx/src/: error.rs  export.rs  import.rs  lib.rs
crates/sheets-xlsx/tests/: libreoffice_compat.rs
docs/: ARCHITECTURE.md  COMPATIBILITY.md  COMPATIBILITY_MATRIX.md  QUALITY_GATE.md  README.md  RELEASING.md  ROADMAP.md  SPRINT_PROCESS.md  USER_GUIDE.md
docs/sprints/: sprint-1.md  sprint-10.md  sprint-11.md  sprint-12.md  sprint-13.md  sprint-14.md  sprint-15.md  sprint-16.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md  sprint-6.md  sprint-7.md  sprint-8.md  sprint-9.md
scripts/: verify-local.sh  verify-public-release.sh
