[package]
name = "sheets-json"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sheets-core = { path = "../sheets-core" }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
