[package]
name = "sheets-xlsx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sheets-core = { path = "../sheets-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zip = "2"
roxmltree = "0.20"
