[package]
name = "sheets-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "sheets_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
sheets-core = { path = "../../../crates/sheets-core" }
sheets-formula = { path = "../../../crates/sheets-formula" }
sheets-xlsx = { path = "../../../crates/sheets-xlsx" }
sheets-csv = { path = "../../../crates/sheets-csv" }
sheets-json = { path = "../../../crates/sheets-json" }
sheets-pivot = { path = "../../../crates/sheets-pivot" }
sheets-chart = { path = "../../../crates/sheets-chart" }
sheets-validation = { path = "../../../crates/sheets-validation" }
sheets-i18n = { path = "../../../crates/sheets-i18n" }
sheets-print = { path = "../../../crates/sheets-print" }
sheets-advanced = { path = "../../../crates/sheets-advanced" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
